# cider-app

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  README.md  cider_config.json  config_help.md  docker_test.json  example_docker_config.json  non_docker_test.json
.github/workflows/: rust.yml  static.yml
metrics/win/: 02-12_224047.txt  02-12_224108.txt  02-12_224135.txt  12-11_030324.txt  12-11_030837.txt  14-11_024223.txt  14-11_024702.txt  14-11_024737.txt
release/: index.html
release/doc/: crates.js  index.html  search-index.js  settings.html  source-files.js
release/doc/atty/: enum.Stream.html  fn.is.html  fn.isnt.html
release/doc/bstr/: fn.B.html  struct.BStr.html  struct.BString.html  struct.Bytes.html  struct.CharIndices.html  struct.Chars.html  struct.Finder.html  struct.FinderReverse.html  struct.FromUtf8Error.html  struct.GraphemeIndices.html  struct.Graphemes.html  struct.SentenceIndices.html  struct.Sentences.html  struct.Utf8Chunk.html  struct.WordIndices.html  struct.Words.html  struct.WordsWithBreakIndices.html  struct.WordsWithBreaks.html  trait.ByteSlice.html
release/doc/chrono/: struct.Duration.html  struct.OutOfRangeError.html
src/: Cargo.toml  config.rs  executor.rs  lib.rs  main.rs  parsing.rs
src/config/: config_structs.rs  mod.rs
src/libs/: errors.rs  executor.rs  mod.rs  parsing.rs  parsing_new.rs  watcher.rs
src/utils/: config.rs  config_generator.rs  executor.rs  mod.rs  parsing.rs  watcher.rs
tests/pyscripts/: accumulate_tests.py
tests/scripts/: test_script.bat  test_script.sh  test_script2.bat
(+21900 files in other folders)
