[package]
name = "cider"
version = "0.1.0"
edition = "2021"
default-run = "cider"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.13", features = ["derive"] }
json = "0.12.4"
log = "0.4.17"
relative-path = "1.7.2"
simplelog = "0.12.0"
chrono = "0.4.22"