[package]
name = "cider"
version = "1.0.3"
edition = "2021"
default-run = "cider"
exclude = ["./metrics", "./dist"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
json = "0.12.4"
log = "0.4.21"
relative-path = "1.9.2"
simplelog = "0.12.1"
chrono = "0.4.34"
csv = "1.3.0"

[dev-dependencies]
anyhow = "1"
